<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoviCard</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="registrate_inicia_sesi_n">Registrate / inicia sesión</string>
    <string name="jmiguel94_gmail_com">jmiguel94@gmail.com</string>
    <string name="registrate">Registrate</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contraseña">*************</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo!</string>
    <string name="inicia_sesi_n_o">Inicia sesión o</string>
    <string name="registrate_para_crea_una_cuenta">Registrate para crea una cuenta</string>
    <string name="introduzca_la_uuid_de_la_tarjeta">Introduzca la <u>UUID</u> de la tarjeta:</string>
    <string name="entrar">Entrar</string>
    <string name="uuid">UUID:</string>
    <string name="_00000000f">00000000F</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="xxx">XXX</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="nombre_del_titular">Nombre del titular</string>
    <string name="titular">Titular</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX XXXX XXXX XXXX</string>
    <string name="mm_aa">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="pagar">Pagar</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="idioma">Idioma</string>
    <string name="tama_o_de_letra">Tamaño de letra</string>
    <string name="modo_nocturno">Modo nocturno</string>
    <string name="ajustes">Ajustes</string>
    <string name="guardar_preferencias">Guardar preferencias</string>
    <string name="consulta_saldo">Consulta saldo</string>
    <string name="picadas_restantes">Viajes restantes:</string>
    <string name="contra_actual">123456789</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nuevaContra">12345</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="cambiar_contra">Cambiar contraseña</string>
    <string name="cambiar_contrasenya"><u>Cambiar contraseña</u></string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="perfil_de_usuario">Perfil de usuario</string>
    <string name="suscripciones">Suscripciones</string>
    <string name="configuraci_n">Configuración</string>
    <string name="logout">Cerrar sesión</string>
    <string name="christopher_flores">Christopher Flores</string>
    <string name="texto_bienvenida">Tu solución para la gestión rápida y eficiente de tus tarjetas de transporte.</string>
    <string name="suscripci_n">Suscripción:</string>
    <string name="gratuita">GRATUITA</string>
    <string name="tarjeta">Tarjeta:</string>
    <string name="movicard_2025">MoviCard © 2025</string>
    <string name="tama_o">Tamaño</string>
    <string name="rellena_los_campos_si_deseas_cambiar_de_contrase_a">Rellena los campos si deseas cambiar de contraseña:</string>
    <string name="estad_sticas_de_la_tarjeta">Estadísticas de la tarjeta</string>
    <string name="atenci_n_al_cliente">Atención al cliente</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="ejemplo_nombre_gmail_com">Ejemplo: nombre@gmail.com</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="tipo_de_consulta">Tipo de consulta:</string>
    <string name="escribe_tu_mensaje_aqu">Escribe tu mensaje aquí...</string>
    <string name="mensaje">Mensaje:</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="en_qu_podemos_ayudarte">¿En qué podemos ayudarte?</string>
    <string name="consulta_general">Consulta general</string>
    <string name="problemas_con_la_tarjeta">Problemas con la tarjeta</string>
    <string name="errores_en_el_saldo_o_recargas">Errores en el saldo o recargas</string>
    <string name="otra_consulta">Otra consulta</string>
    <string name="sugerencias_y_mejoras">Sugerencias y mejoras</string>
    <string name="registrar_tarjeta">Registrar tarjeta</string>
    <string name="bloqueo_desbloqueo_de_tarjeta">Bloqueo/desbloqueo de tarjeta</string>
    <string name="estado">Estado:</string>
    <string name="bloquear">Bloquear</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="recargar_saldo">Recargar saldo</string>
    <string name="bloquea_desbloquea_tarjeta">Bloquea/desbloquea tarjeta</string>
    <string name="freemium">FREEMIUM</string>
    <string name="premium">PREMIUM</string>
    <string name="obtener">OBTENER</string>
    <string name="_10">10 €</string>
    <string name="plan_actual">PLAN ACTUAL</string>
    <string name="detalles_de_compra">Detalles de compra</string>
    <string name="noms">Nombre/s</string>
    <string name="ejemplo_nombres">Introduce tu nombre completo</string>
    <string name="ejemplo_apellidos">Introduce tus apellidos</string>
    <string name="ejemplo_correo">Correo electrónico válido</string>
    <string name="ejemplo_numero">Número de teléfono con prefijo</string>
    <string name="ejemplo_direccion">Dirección de envío</string>
    <string name="ejemplo_localidad">Ciudad o localidad</string>
    <string name="cognoms">Apellidos</string>
    <string name="correu">Correo</string>
    <string name="tel_fon">Teléfono</string>
    <string name="direcci">Dirección</string>
    <string name="localitat">Localidad</string>
    <string name="detalle_pedido">Detalles del pedido</string>
    <string name="suscripci_n_premium">Suscripción premium</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">TOTAL:</string>
    <string name="iva_21_incluido">IVA 21% incluido</string>
    <string name="_2_1">2.1€</string>
    <string name="boton_continuar">CONTINUAR</string>
    <string name="resumen_de_la_compra">Resumen de la compra</string>
    <string name="fecha">"Fecha:</string>
    <string name="pagado"><u>PAGADO</u></string>
    <string name="informaci_n_del_usuario">Información del usuario:</string>
    <string name="informaci_n_del_env_o">Información del envío:</string>
    <string name="descargar_pdf">Descargar PDF</string>
    <string name="apellidos">"Apellidos:</string>
    <string name="nombres">Nombres:</string>
    <string name="correo">Correo:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="localidad">Localidad:</string>
    <string name="consultar_saldo">CONSULTAR SALDO</string>
    <string name="consultar_saldo_n_recargar_saldo_n_bloqueo_de_tarjeta_n_seguro_de_tarjeta">- Consultar saldo\n- Recargar saldo\n- Bloqueo de tarjeta\n- Seguro de tarjeta</string>
    <string name="consultar_saldo_n_recargar_saldo_n_bloqueo_de_tarjeta_n_seguro_de_tarjeta_n_estadisticas_n_facturas_n_planificar_rutas_n_notificaciones_personalizadas">- Consultar saldo\n- Recargar saldo\n- Bloqueo de tarjeta\n- Seguro de tarjeta\n- Estadisticas\n- Facturas\n- Planificar rutas\n- Notificaciones personalizadas</string>
    <string name="detalle_del_pedido">Detalle del Pedido</string>
    <string name="producto_suscripci_n_premium">Producto: Suscripción Premium</string>
    <string name="cantidad_1">Cantidad: 1</string>
    <string name="precio_unitario_10">Precio Unitario: 10€</string>
    <string name="total_10">Total: 10€</string>
    <string name="facturas">Facturas</string>
    <string name="gr_ficas">Gráficas</string>
    <string name="planificar_rutas">Planificar rutas</string>
    <string name="consultar_saldo_min">Consultar saldo</string>
    <string name="movi_10">MOVI_10</string>
    <string name="viajes_disponibles_10"><b>Viajes disponibles:</b> 10</string>
    <string name="duraci_n_hasta_que_concluyan_todos_los_viajes_disponibles"><b>Duración:</b> Hasta que concluyan todos los viajes disponibles</string>
    <string name="movi_mes">MOVI_MES</string>
    <string name="viajes_disponibles_30_dias"><b>Viajes disponibles:</b> 30 días</string>
    <string name="duraci_n_hasta_que_concluyan_los_30_d_as_despu_s_del_primer_registro"><b>Duración:</b> Hasta que concluyan los 30 días después del primer registro.</string>
    <string name="movi_trimestral">MOVI_TRIMESTRAL</string>
    <string name="viajes_disponibles_90_dias"><b>Viajes disponibles:</b> 90 días</string>
    <string name="duraci_n_hasta_que_concluyan_los_90_d_as_despu_s_del_primer_registro"><b>Duración:</b> Hasta que concluyan los 90 días después del primer registro.</string>
    <string name="t_tulos_disponibles">Títulos disponibles</string>
    <string name="selecione_el_t_tulo_que_desee_adquirir">Selecione el título que desee adquirir:</string>
    <string name="t_tulo_seleccionado">Título seleccionado:</string>
    <string name="hold_continue">Mantén pulsado el botón \"CONTINUAR\" para proceder con el trámite</string>
</resources>