<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".PerfilUsuario">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/azul_main"
            android:elevation="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rowdies"
                android:text="@string/movicard"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/foto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/foto_perfil" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/christopher_flores"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2023_christopher.flroes@gmail.cat"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

        <!-- Cambiar contraseña -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cambiar_contra"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:cardElevation="1dp"
            app:layout_constraintTop_toBottomOf="@id/perfil">

            <TextView
                android:id="@+id/desplegar_contra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:text="@string/cambiar_contra"
                app:drawableEndCompat="@drawable/flecha_derecha" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fill_contra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#EDEDF1"
            android:visibility="visible"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/cambiar_contra">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/cambiar_contra">

                <!-- Campos de texto y botones -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:text="@string/cambiar_contrasenya" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="Rellena los campos si deseas cambiar de contraseña: "
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/contrase_a_actual"
                    android:textSize="11sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/nombreEnvio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/contra_actual"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/nueva_contrase_a"
                    android:textSize="11sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/nueva_contra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/nuevaContra"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/repita_la_contrase_a"
                    android:textSize="11sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/repite_contra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/nuevaContra"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_cancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/btn_gris"
                        android:text="@string/cancelar"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn_guardar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/azul_main"
                        android:text="@string/guardar" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_main"
            app:itemIconSize="40dp"
            app:itemIconTint="@color/white"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navegation" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Menú lateral (Navigation Drawer) -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_menu_drawer"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer_nav" />
</androidx.drawerlayout.widget.DrawerLayout>